@@ -4,6 +4,9 @@ This file tracks the changes to Wing over time. Especially
 with respect to new features and compatibility changes.
 ==========================================================
 
+2019-04-26
+ * Added a session id conflict check for better security auditing.
+
 2019-04-15
  * Do not die in sending email jobs.  Just delete the job.
 
